--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
 
-    <div class="footer"><p>contributor-neutral.org, Dr Russell Keith-Magee</p></div>
+    <div class="footer"><p>contributorneutral.org, Dr Russell Keith-Magee</p></div>
 
 </div>
 </body>
