--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </section>
 
-    
+
     <div class="navbar-spacer"></div>
     <nav class="navbar">
       <div class="container">
@@ -84,7 +84,7 @@
 
     <div class="docs-section" id="how">
         <h4>How do I become Contributor Neutral?</h4>
-           
+
         <h6 class="docs-header">Acknowledgement</h6>
         <p>The first step is to acknowledge the issue. Talk with your colleagues and peers about the problem. Talk about the Open Source software that you use, and how that software is produced and maintained.</p>
 
@@ -103,7 +103,16 @@
         <p>Talk about your commitment to be <span class="cn">Contributor Neutral</span>. Ask your suppliers or employers if they will adopt the <span class="cn">Contributor Neutral</span> pledge. Tell your suppliers that <span class="cn">Contributor Neutrality</span> is a factor in your purchasing decisions.</p>
      </div>
 
+     <div class="docs-section" id="how">
+      <h4>Contact</h4>
+      <p>Want to know more? Want to get involved?</p>
 
+      <ul>
+        <li><i class="far fa-envelope"></i> <a href="mailto:contact@contributorneutral.org">contact@contributorneutral.org</a></li>
+        <li><i class="fab fa-twitter"></i>
+          <a href="https://twitter.com/ContribNeutral">@ContribNeutral</a></li>
+      </ul>
+     </div>
 
     <div class="footer"><p>contributorneutral.org, Dr Russell Keith-Magee</p></div>
 
