Add header link to contact.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <li class="navbar-item"><a class="navbar-link" href="#what">Overview</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#meaning">Definition</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#how">How</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -103,7 +104,7 @@
         <p>Talk about your commitment to be <span class="cn">Contributor Neutral</span>. Ask your suppliers or employers if they will adopt the <span class="cn">Contributor Neutral</span> pledge. Tell your suppliers that <span class="cn">Contributor Neutrality</span> is a factor in your purchasing decisions.</p>
      </div>
 
-     <div class="docs-section" id="how">
+     <div class="docs-section" id="contact">
       <h4>Contact</h4>
       <p>Want to know more? Want to get involved?</p>
 
